cmake_minimum_required(VERSION 3.26)
project(re_ds)

set(CMAKE_CXX_STANDARD 17)

add_executable(re_ds
        MergeSort.cpp
#        QuickSort.cpp
#        my_stack.cpp
#        my_queue.cpp
        #        快排.cpp
        #        SelectionSort.cpp
        #        shell_sort.cpp
#        SeqList.cpp
#        ChainList.cpp
)
